# APKLife

./: .env.example  .gitignore  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.ru.md  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  README.ru.md  SECURITY.md  SUMMARY.md  app.py  bridge.py  build.gradle.kts  config.py  data.py  local.properties  main.py  requirements-dev.txt  routes_group.py  suggestions.json  utils_schedule.py
.github/: PULL_REQUEST_TEMPLATE.md
app/src/main/python/runtime_app/: app.py  pyproject.toml
app/src/main/python/runtime_app/android_bridge/: capacitor.config.json
app/src/main/python/runtime_app/data/failed_html/: 20260226_082921_42bc6ee3e2d1e1a3.html  20260226_082923_df013401cdd65c2e.html  20260226_082927_1462f3b2c57e780e.html  20260226_083029_86dbf15b667f1e20.html  20260519_002141_98dc69479da11916.html
app/src/main/python/runtime_app/routes/: group.py  main.py
app/src/main/python/runtime_app/services/: calls.py  config.py  exceptions.py  i18n.py  mock_service.py  schedule.py  schedule_parser.py  utils_schedule.py  version.py
app/src/main/python/runtime_app/services/sources/: base.py  html_source.py
app/src/main/python/runtime_app/static/: app.js  debug.js  scripts.js  style.css  sw.js
app/src/main/python/runtime_app/templates/: base.html  group.html  index.html
app/src/main/python/runtime_app/templates/partials/: schedule_content.html
app/src/main/python/runtime_app/tests/: test_version.py
app/src/main/python/runtime_app/tests/fixtures/: problematic_realistic.html  valid_page.html
routes/: info.py  (+2 more)
(+89 files in other folders)
