[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apklife"
version = "0.1.0"
description = "Student schedule app with cache-first fallback and Android wrappers"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
  "mypy>=1.10.0",
  "types-requests",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"

disable_error_code = ["typeddict-item", "arg-type", "assignment", "attr-defined", "operator", "return-value", "index"]

[tool.setuptools]
packages = ["services", "services.sources", "routes"]
